--- a/static/index.html
+++ b/static/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title> ASCII ART-WEB</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ASCII ART-WEB</title>
 </head>
 <body>
-    <h2>ASCII ART Maker</h2>
-
+    <h1>ASCII ART Maker</h1>
 <p>The select element defines a drop-down list:</p>
 <div>
   <form method="POST" action="/form">     
-      <label>Name</label><input name="name" type="text" value="" />
+      <label for="ascii">Text Input: </label>
+      <input name="ascii" type="text" placeholder="Type here..." />
       <label for="banner">Choose a Banner:</label>
       <select id="banner" name="banner">
         <option value="tinker">Standard</option>
