Displayed form, and reached the ascii-art handler successfully

--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,7 @@
     <h1>ASCII ART Maker</h1>
 <p>The select element defines a drop-down list:</p>
 <div>
-  <form method="POST" action="/form">     
+  <form method="POST" action="/ascii-art">     
       <label for="ascii">Text Input: </label>
       <input name="ascii" type="text" placeholder="Type here..." />
       <label for="banner">Choose a Banner:</label>
