--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
       <input name="ascii" type="text" placeholder="Type here..." />
       <label for="banner">Choose a Banner:</label>
       <select id="banner" name="banner">
-        <option value="tinker">Standard</option>
+        <option value="standard">Standard</option>
         <option value="shadow">Shadow</option>
         <option value="thinkertoy">ThinkerToy</option>
       </select> 
