Can produce a txt file, but not returning any output yet

--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
 <div>
   <form method="POST" action="/ascii-art">     
       <label for="ascii">Text Input: </label>
-      <input name="ascii" type="text" placeholder="Type here..." />
+      <textarea name="ascii" cols="30" rows="10" placeholder="Type here..."></textarea>
       <label for="banner">Choose a Banner:</label>
       <select id="banner" name="banner">
         <option value="standard">Standard</option>
